src/objects/CventEvents__SurveyAnswer__c.object
<CustomObject>
    <description>Represents the answer of a survey.</description>
    <fields>
        <fullName>CventEvents__AnswerStub__c</fullName>
        <description>Stores either compound key built on answer and category stubs for matrix answers, or answer stub for other answer types.</description>
        <externalId>true</externalId>
        <label>Answer Stub</label>
        <length>73</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CventEvents__CventAnswerStub__c</fullName>
        <description>Stores Cvent database answer stub.</description>
        <externalId>true</externalId>
        <inlineHelpText>Stores Cvent database answer stub.</inlineHelpText>
        <label>Cvent Answer Stub</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__EventName__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__EventStub__c</fullName>
        <externalId>true</externalId>
        <label>Event Stub</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__QuestionText__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; CventEvents__Question__r.CventEvents__QuestionText__c, &quot;&quot;) &amp; HYPERLINK(&quot;/&quot; &amp; CventEvents__Question__c, CventEvents__Question__r.CventEvents__QuestionText__c)</formula>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Number</label>
        <referenceTo>CventEvents__SurveyQuestion__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__RespondentName__c</fullName>
        <formula>CventEvents__Respondent__r.CventEvents__RespondentName__c</formula>
        <label>Respondent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Respondent__c</fullName>
        <label>Respondent</label>
        <referenceTo>CventEvents__Respondent__c</referenceTo>
        <relationshipLabel>Survey Answers</relationshipLabel>
        <relationshipName>SurveyAnswers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CventEvents__SessionName__c</fullName>
        <label>Session Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__SessionStub__c</fullName>
        <externalId>true</externalId>
        <label>Session Stub</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__SpeakerName__c</fullName>
        <label>Speaker Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__SpeakerStub__c</fullName>
        <externalId>true</externalId>
        <label>Speaker Stub</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__SurveyType__c</fullName>
        <label>Survey Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Event</fullName>
                </value>
                <value>
                    <fullName>Session</fullName>
                </value>
                <value>
                    <fullName>Standalone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__ValueDate__c</fullName>
        <description>Stores date question answers.</description>
        <inlineHelpText>Stores date question answers.</inlineHelpText>
        <label>Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__ValueDatetime__c</fullName>
        <description>Stores datetime question answers.</description>
        <inlineHelpText>Stores datetime question answers.</inlineHelpText>
        <label>Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CventEvents__ValueNumber__c</fullName>
        <description>Stores number/decimal/currency/rating question answers.</description>
        <inlineHelpText>Stores number/decimal/currency/rating question answers.</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__ValueText__c</fullName>
        <description>Stores answers for the rest of the question types.</description>
        <inlineHelpText>Stores answers for the rest of the question types.</inlineHelpText>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__Value__c</fullName>
        <description>Stores casted to string and truncated to 255 characters answer value.</description>
        <inlineHelpText>Stores casted to string and truncated to 255 characters answer value.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Survey Answer</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__RespondentName__c</columns>
        <columns>CventEvents__QuestionText__c</columns>
        <columns>CventEvents__Value__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{00000000}</displayFormat>
        <label>Survey Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>